--- a/src/view/Register.form
+++ b/src/view/Register.form
@@ -44,7 +44,9 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace min="0" pref="133" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+                  <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="29" max="32767" attributes="0"/>
                   <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -52,6 +54,11 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Component id="jPanel2" alignment="0" max="32767" attributes="0"/>
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="164" max="-2" attributes="0"/>
+                  <Component id="jLabel8" min="-2" pref="56" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
+              </Group>
           </Group>
         </DimensionLayout>
       </Layout>
@@ -85,13 +92,11 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="inputpassword" pref="393" max="32767" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="inputnama" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="inputusername" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="buttondaftar" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="jeniskelamin" alignment="0" pref="393" max="32767" attributes="0"/>
-                                      <Component id="inputnotelp" alignment="1" max="32767" attributes="0"/>
-                                  </Group>
+                                  <Component id="inputnama" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="inputusername" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="buttondaftar" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jeniskelamin" alignment="0" pref="393" max="32767" attributes="0"/>
+                                  <Component id="inputnotelp" alignment="1" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
@@ -246,6 +251,13 @@
             </Component>
           </SubComponents>
         </Container>
+        <Component class="javax.swing.JLabel" name="jLabel8">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/view/Coklat Sederhana dan Minimalis Rumah dan Dekorasi Logo (3) (1).png"/>
+            </Property>
+          </Properties>
+        </Component>
       </SubComponents>
     </Container>
   </SubComponents>
