--- a/src/view/Detail_Buy.form
+++ b/src/view/Detail_Buy.form
@@ -283,6 +283,9 @@
                   </Table>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="TabeldetailMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -296,6 +299,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="AMBIL TAWARAN"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonambiltawaranActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="buttonkembali">
           <Properties>
