--- a/src/view/Menu_Utama_Pembeli.form
+++ b/src/view/Menu_Utama_Pembeli.form
@@ -363,6 +363,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="SHOW OFFER"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonshowofferActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="buttonshowmarket">
               <Properties>
@@ -382,6 +385,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Batalkan Offer"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonbatalkanofferActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
